Fixed some typos

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="intro-text">
                     <h4>
                         Hi! I'm Aleksi and I like making stuff. <br>
-                        Dosen't matter if it's digital or physical, I'll make it.<br>
+                        Doesn't matter if it's digital or physical, I'll make it.<br>
                         However this page is made to showcase some of my digital creations and to tell a little about them.
                     </h4>
                 </div>
@@ -156,15 +156,15 @@
 
                         <div class="extra-info">
                             <img class="gallery-extra" src="public/gifs/Blockdodge_react.gif" alt="Block dodging game consept made in react"/>
-                            <p>The game started its life as a react component part of a bigger project and can be considered as a proof of consept for further developement <br>
-                            The idea is quite simple; navigate a block through other falling blocks, the longer a player can survive the bigger their score will be <br>
-                            Game was basic and simple, hostile block spawning worked as a group of blocks spawning at the same time and score was calculated from the time stayed alive</p>
+                            <p>The game started its life as a react component part of a bigger project and can be considered as a proof of consept for further developement.<br>
+                            The idea is quite simple; navigate a block through other falling blocks, the longer a player can survive the bigger their score will be.<br>
+                            Game was basic and simple, hostile block spawning worked as a group of blocks spawning at the same time and score was calculated from the time stayed alive.</p>
                         </div>
 
                         <div class="extra-info">
                             <img class="gallery-extra" src="public/gifs/bab-start.gif" alt="menu view, settings and start view of BUST-A-BLOCK"/>
                             <p>The current version of the game contains a lot more content. <br>
-                            Main menu is simple with a few settings to change, including the options to enable simplified graphics <br>
+                            Main menu is simple with a few settings to change, including the options to enable simplified graphics.<br>
                         </div>
 
                         <div class="extra-info">
@@ -238,7 +238,7 @@
                             </div>
                         </div>
                         <div>
-                            <p>The first minigame was a word puzzle, where player is given just the syllables of a word in a random order<br>
+                            <p>The first minigame was a word puzzle, where player is given just the syllables of a word in a random order.<br>
                             Player then needs to rearrange the syllables to form the original word. <br>
                             There is a two minute time limit and each correct answer gives a small time bonus, while a wrong answer gives a time penalty.<br>
                             When the time runs out, score is given and the player can examine how many of their asnwers were right or wrong.</p>
